<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".AdvancedLevel">

    <LinearLayout
        android:id="@+id/flags_row"
        android:layout_below="@id/timer_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/flag_img_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ae" />

        <ImageView
            android:id="@+id/flag_img_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ad" />

        <ImageView
            android:id="@+id/flag_img_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ag" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_below="@id/flags_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/guess_all_flags"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/flag_row_1"
        android:layout_below="@id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flag_1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/guess_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="@string/guess_the_flag_1"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:ems="10"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flag_row_2"
        android:layout_below="@id/flag_row_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flag_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/guess_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="@string/guess_the_flag_2"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:ems="10"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/flag_row_3"
        android:layout_below="@id/flag_row_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flag_3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/guess_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="@string/guess_the_flag_3"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:ems="10"/>

    </LinearLayout>

    <TextView
        android:id="@+id/answer_status_lbl"
        android:layout_below="@id/flag_row_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:background="@drawable/btn_style"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />







    <TextView
        android:id="@+id/score_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/timer_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
         />

</RelativeLayout>